# multi-agent-research-system

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
config/: agents.yaml  tasks.yaml
src/: agents.py  logger.py  tasks.py  tools.py
tests/: test_basic.py
