[project]
name = "multi-agent-research-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.10.1",
    "duckduckgo-search>=8.1.1",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.23",
]
