[project]
name = "multi-agent-research-system"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.10.1",
    "duckduckgo-search>=8.1.1",
    "langchain>=1.2.11",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.18",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "litellm>=1.82.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.23",
]
[project.scripts]
mars = "main:main"
